--- a/game-sales.ipynb
+++ b/game-sales.ipynb
@@ -6,12 +6,12 @@
    "metadata": {},
    "source": [
     "# Game Sales\n",
-    "Luke Tao (lyt5), Euna Lee (ekl??), Vinny Huang (???)"
+    "Luke Tao (lyt5), Euna Lee (ekl49), Vinny Huang (vh222)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "4        <NA>  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
