Add descriptions and headers

--- a/game-sales.ipynb
+++ b/game-sales.ipynb
@@ -6,12 +6,33 @@
    "metadata": {},
    "source": [
     "# Game Sales\n",
-    "Luke Tao (lyt5), Euna Lee (ekl49), Vinny Huang (vh222)"
+    "Luke Tao (lyt5), Euna Lee (ekl49), Vinny Huang (vh222)\n",
+    "\n",
+    "\n",
+    "----\n",
+    "# Introduction\n",
+    "This project aims to deterine which video games are most successful in terms of both sales and critical success. \n",
+    "\n",
+    "**Hypothesis**:\n",
+    "Action games have the highest sales while older games have the highest ratings. \n",
+    "\n",
+    "# Sources\n",
+    "We three datasets in our analysis. The first was the primary dataset which provided sales information along with platform, year, genre, and publisher. We used two supplementary datasets to provide metacritic scores. \n",
+    "\n",
+    "The datasets are public domain and hosted by Kaggle.com\n",
+    "\n",
+    "sales: https://www.kaggle.com/datasets/ulrikthygepedersen/video-games-sales\n",
+    "\n",
+    "scores 1: https://www.kaggle.com/datasets/deepcontractor/top-video-games-19952021-metacritic\n",
+    "\n",
+    "scores 2: https://www.kaggle.com/datasets/henrylin03/metacritic-games-user-reviews-and-metascores\n",
+    "\n",
+    "----"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -133,18 +154,20 @@
        "4      8.89     10.22          1.0         31.37  "
       ]
      },
-     "execution_count": 285,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# import necessary packages\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
+    "# load data\n",
     "sales = pd.read_csv('video_games_sales.csv')\n",
     "scores = pd.read_csv('top_video_games.csv', skipinitialspace=True)\n",
     "scores2 = pd.read_csv('metacritic.csv', skipinitialspace=True)\n",
@@ -153,6 +176,7 @@
     "scores = scores.convert_dtypes()\n",
     "scores2 = scores2.convert_dtypes()\n",
     "\n",
+    "# remove unecesssary/duplicate columns\n",
     "sales.drop(['rank'], inplace=True, axis=1)\n",
     "scores.drop(['release_date', 'summary'], inplace=True, axis=1)\n",
     "scores2.drop(['release_date', 'summary'], inplace=True, axis=1)\n",
@@ -161,11 +185,21 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Merging Files\n",
+    "Now that we have imported all of the datasets and removed duplicate columns, we now need to combine them all into one dataframe."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Metacritic score datasets use different platform names than sales dataset\n",
     "platform_dict = {  \n",
     "  'PC' : 'PC',\n",
     "  'Nintendo 64' : 'N64',\n",
@@ -196,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +396,7 @@
        "8322          0.17       <NA>       <NA>  "
       ]
      },
-     "execution_count": 287,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -549,13 +583,13 @@
        "8322          0.17       <NA>       <NA>  "
       ]
      },
-     "execution_count": 288,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# add scores2\n",
+    "# add scores2 to dataframe\n",
     "scores2['platform'] = scores2['platform'].map(platform_dict).fillna(scores2['platform'])\n",
     "scores2 = scores2.replace(to_replace='tbd', value=pd.NA)\n",
     "scores2['metascore'] = scores2['metascore'].astype('Int64')\n",
@@ -572,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -602,8 +636,18 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "# Data Visualization\n",
+    "Now that we have successfully combined and cleaned the data, we can now start gaining a better understanding of its trends and features."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -621,6 +665,20 @@
     "sns.heatmap(df.corr(), annot =True )\n",
     "plt.show()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "# Machine Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
