Added Linear Regression
Changed categorical data like genre and publisher into numerical data so we can run linear regression. Linear regression looks to be inaccurate as the scores don't look too great.

--- a/game-sales.ipynb
+++ b/game-sales.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "4      8.89     10.22          1.0         31.37  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "8322          0.17       <NA>       <NA>  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
        "8322          0.17       <NA>       <NA>  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -676,8 +676,67 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model training score:  0.0007893938768035458\n",
+      "Model testing score:  0.0006826622692004403\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/vinny/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_regression.py:95: FutureWarning: Arrays of bytes/strings is being converted to decimal numbers if dtype='numeric'. This behavior is deprecated in 0.24 and will be removed in 1.1 (renaming of 0.26). Please convert your data to numeric values explicitly instead.\n",
+      "  y_true = check_array(y_true, ensure_2d=False, dtype=dtype)\n",
+      "/Users/vinny/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_regression.py:95: FutureWarning: Arrays of bytes/strings is being converted to decimal numbers if dtype='numeric'. This behavior is deprecated in 0.24 and will be removed in 1.1 (renaming of 0.26). Please convert your data to numeric values explicitly instead.\n",
+      "  y_true = check_array(y_true, ensure_2d=False, dtype=dtype)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "le = LabelEncoder() # creating label encoder instance\n",
+    "\n",
+    "genreLabel = le.fit_transform(df['genre']) # .fit_transform function fits labels\n",
+    "\n",
+    "df.drop('genre',axis=1,inplace=True) # dropping the categorical data\n",
+    "df['genre'] = genreLabel # setting the categorical data values into numerical data values\n",
+    "\n",
+    "publisherLabel = le.fit_transform(df['publisher']) # doing same thing with publishers\n",
+    "\n",
+    "df.drop('publisher',axis=1,inplace=True)\n",
+    "df['publisher'] = publisherLabel\n",
+    "\n",
+    "\n",
+    "\n",
+    "feature = df[['genre','publisher']] # setting features to be genre and publisher because idk how to deal with metacritic score and userscore (can't just set to 0)\n",
+    "target = df['global_sales'] \n",
+    "\n",
+    "feature_train,feature_test,target_train,target_test = train_test_split(feature,target,test_size = 0.2,random_state = 42)\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "\n",
+    "model.fit(feature_train,target_train)\n",
+    "prediction = model.predict(feature_test)\n",
+    "\n",
+    "print('Model training score: ', model.score(feature_train, target_train))\n",
+    "print('Model testing score: ', model.score(feature_test, target_test))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
