Added new linreg model
- new linear regression model takes into account na_sales and eu_sales as features in order to predict global_sales

--- a/game-sales.ipynb
+++ b/game-sales.ipynb
@@ -11,10 +11,10 @@
     "\n",
     "----\n",
     "# Introduction\n",
-    "This project aims to determine what number of global sales will a game of a certain genre and score reach?\n",
+    "This project aims to determine what number of global sales a game will reach given certain information about the game (publisher, genre, metascore, etc.).\n",
     "\n",
     "**Hypothesis**:\n",
-    "An action game with a high score would have a higher number of global sales than other games with any other genre and score.\n",
+    "The publisher, genre, metascore, and userscore will be the features that best predict the global sales of a game.\n",
     "\n",
     "# Sources\n",
     "We three datasets in our analysis. The first was the primary dataset which provided sales information along with platform, year, genre, and publisher. We used two supplementary datasets to provide metacritic scores. \n",
@@ -674,12 +674,12 @@
    "metadata": {},
    "source": [
     "----\n",
-    "# Machine Learning"
+    "# Machine Learning (Testing Hypothesis)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
     }
    ],
    "source": [
-    "feature = df[['genre','publisher','metascore','userscore']] # setting features to be genre and publisher because idk how to deal with metacritic score and userscore (can't just set to 0)\n",
+    "feature = df[['genre','publisher','metascore','userscore']]\n",
     "target = df['global_sales'] \n",
     "\n",
     "feature_train,feature_test,target_train,target_test = train_test_split(feature,target,test_size = 0.2,random_state = 42)\n",
@@ -761,12 +761,73 @@
     "----\n",
     "# Analysis Thus Far\n",
     "\n",
-    "After running a linear regression to try and predict global sales numbers of a game given their genre, publisher, metascore, and userscore, we were surprised to find out that the aforementioned features were not all that good in predicting global sales; this was reflected in the correlation matrix after we converted categorical data like genre and publisher into numerical data via labels. At a first glance, we thought that there would surely be a correlation between how good a game is (though admittedly through subjective standards such as metascore and userscore) and how well the game would do in the market, but through the linear regression test, we can see that other factors not captured in the dataset we are working with affect global sales. One factor that we thought of after looking back on our data and test is the budget of the game. Although we made sure to include the publisher as a feature for our model, we naively neglected the fact that not all games by the same publisher are treated equally. What we mean by this is that some games which have historically brought in more profit are more likely to receive more money when it comes time to create a sequel to the game. A larger budget would enable game developers to spend more time and effort into the game, making it better and potentially making it more popular world wide on release. We have looked into datasets that include this feature, but unfortunately, we have not found one. Going forward, this is a feature that we would like to see play a role into our model, and whether or not it might positively or negatively impact our model's accuracy. "
+    "After running a linear regression to try and predict global sales numbers of a game given their genre, publisher, metascore, and userscore, we were surprised to find out that the aforementioned features were not all that good in predicting global sales; this was reflected in the correlation matrix after we converted categorical data like genre and publisher into numerical data via labels. At a first glance, we thought that there would surely be a correlation between how good a game is (though admittedly through subjective standards such as metascore and userscore) and how well the game would do in the market, but through the linear regression test, we can see that other factors not captured in the dataset we are working with affect global sales. \n",
+    "\n",
+    "One factor that we thought of after looking back on our data and test is the budget of the game. Although we made sure to include the publisher as a feature for our model, we naively neglected the fact that not all games by the same publisher are treated equally. What we mean by this is that some games which have historically brought in more profit are more likely to receive more money when it comes time to create a sequel to the game. A larger budget would enable game developers to spend more time and effort into the game, making it better and potentially making it more popular world wide on release. We have looked into datasets that include this feature, but unfortunately, we have not found one. Going forward, this is a feature that we would like to see play a role into our model, and whether or not it might positively or negatively impact our model's accuracy.\n",
+    "\n",
+    "Moving on, we want to explore the features that DO best predict global sales. Looking back at our correlation matrix, we want to test na_sales and eu_sales as features, and see how our linear regression model changes."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Machine Learning (Testing Other Avenues)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model training score:  0.977606768557775\n",
+      "Model testing score:  0.9446173585606034\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/vinny/opt/anaconda3/lib/python3.9/site-packages/sklearn/utils/validation.py:964: FutureWarning: Arrays of bytes/strings is being converted to decimal numbers if dtype='numeric'. This behavior is deprecated in 0.24 and will be removed in 1.1 (renaming of 0.26). Please convert your data to numeric values explicitly instead.\n",
+      "  X = check_array(\n",
+      "/Users/vinny/opt/anaconda3/lib/python3.9/site-packages/sklearn/base.py:566: FutureWarning: Arrays of bytes/strings is being converted to decimal numbers if dtype='numeric'. This behavior is deprecated in 0.24 and will be removed in 1.1 (renaming of 0.26). Please convert your data to numeric values explicitly instead.\n",
+      "  X = check_array(X, **check_params)\n",
+      "/Users/vinny/opt/anaconda3/lib/python3.9/site-packages/sklearn/base.py:566: FutureWarning: Arrays of bytes/strings is being converted to decimal numbers if dtype='numeric'. This behavior is deprecated in 0.24 and will be removed in 1.1 (renaming of 0.26). Please convert your data to numeric values explicitly instead.\n",
+      "  X = check_array(X, **check_params)\n",
+      "/Users/vinny/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_regression.py:95: FutureWarning: Arrays of bytes/strings is being converted to decimal numbers if dtype='numeric'. This behavior is deprecated in 0.24 and will be removed in 1.1 (renaming of 0.26). Please convert your data to numeric values explicitly instead.\n",
+      "  y_true = check_array(y_true, ensure_2d=False, dtype=dtype)\n",
+      "/Users/vinny/opt/anaconda3/lib/python3.9/site-packages/sklearn/base.py:566: FutureWarning: Arrays of bytes/strings is being converted to decimal numbers if dtype='numeric'. This behavior is deprecated in 0.24 and will be removed in 1.1 (renaming of 0.26). Please convert your data to numeric values explicitly instead.\n",
+      "  X = check_array(X, **check_params)\n",
+      "/Users/vinny/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_regression.py:95: FutureWarning: Arrays of bytes/strings is being converted to decimal numbers if dtype='numeric'. This behavior is deprecated in 0.24 and will be removed in 1.1 (renaming of 0.26). Please convert your data to numeric values explicitly instead.\n",
+      "  y_true = check_array(y_true, ensure_2d=False, dtype=dtype)\n"
+     ]
+    }
+   ],
+   "source": [
+    "feature = df[['na_sales','eu_sales']]\n",
+    "target = df['global_sales'] \n",
+    "\n",
+    "feature_train,feature_test,target_train,target_test = train_test_split(feature,target,test_size = 0.2,random_state = 42)\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "\n",
+    "model.fit(feature_train,target_train)\n",
+    "prediction = model.predict(feature_test)\n",
+    "\n",
+    "print('Model training score: ', model.score(feature_train, target_train))\n",
+    "print('Model testing score: ', model.score(feature_test, target_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
