Started further analysis
- added some base level analysis

--- a/game-sales.ipynb
+++ b/game-sales.ipynb
@@ -758,14 +758,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "----\n",
+    "\n",
     "# Analysis Thus Far\n",
     "\n",
     "After running a linear regression to try and predict global sales numbers of a game given their genre, publisher, metascore, and userscore, we were surprised to find out that the aforementioned features were not all that good in predicting global sales; this was reflected in the correlation matrix after we converted categorical data like genre and publisher into numerical data via labels. At a first glance, we thought that there would surely be a correlation between how good a game is (though admittedly through subjective standards such as metascore and userscore) and how well the game would do in the market, but through the linear regression test, we can see that other factors not captured in the dataset we are working with affect global sales. \n",
     "\n",
     "One factor that we thought of after looking back on our data and test is the budget of the game. Although we made sure to include the publisher as a feature for our model, we naively neglected the fact that not all games by the same publisher are treated equally. What we mean by this is that some games which have historically brought in more profit are more likely to receive more money when it comes time to create a sequel to the game. A larger budget would enable game developers to spend more time and effort into the game, making it better and potentially making it more popular world wide on release. We have looked into datasets that include this feature, but unfortunately, we have not found one. Going forward, this is a feature that we would like to see play a role into our model, and whether or not it might positively or negatively impact our model's accuracy.\n",
     "\n",
-    "Moving on, we want to explore the features that DO best predict global sales. Looking back at our correlation matrix, we want to test na_sales and eu_sales as features, and see how our linear regression model changes."
+    "Moving on, we want to explore the features that DO best predict global sales. Looking back at our correlation matrix, we want to test na_sales and eu_sales as features, and see how our linear regression model changes.\n",
+    "\n",
+    "----"
    ]
   },
   {
@@ -824,10 +826,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Further Analysis\n",
+    "\n",
+    "As we can see, after changing the features to reflect what we observe to be most effective in the correlation matrix, the model's training score and testing score have improved significantly. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
