Added further analysis

--- a/game-sales.ipynb
+++ b/game-sales.ipynb
@@ -820,13 +820,6 @@
             ]
         },
         {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": []
-        },
-        {
             "attachments": {},
             "cell_type": "markdown",
             "metadata": {},
@@ -905,7 +898,7 @@
             "source": [
                 "# Further Analysis\n",
                 "\n",
-                "As we can see, after changing the features to reflect what we observe to be most effective in the correlation matrix, the model's training score and testing score have improved significantly. "
+                "As we can see, after changing the features to reflect what we observe to be most effective in the correlation matrix, the model's training score and testing score have improved significantly. It's clear that games that do well in sales in NA and EU are generally good at predicting global sales. This, however, also brings up the question of bias in the dataset. Why is it that NA and EU sales are so good at predicting global sales? One answer could be that the games in this dataset cater more predominantly to NA and EU people. The dataset might contain games from certain publishers or genres that are more popular in NA and EU rather than Asia (perhaps action games do better in NA and EU while strategy games do better in Asia and the dataset has less strategy games..?). It could also be that Japanese publishers are less likely to be in the dataset so there are less Japanese games and so JP sales do not correlate/predict global sales as well. In summary, NA and EU markets might be more similar to each other in terms of customer preferences, consumer behavior, cultural influences, and economic factors than the JP and Asia markets. This homogeneity of the market could make it easier for the model to capture the underlying patterns and relationships between NA and EU sales and global sales. Additionally, it's also possible that the data for NA and EU sales is more complete, reliable, and consistent than the data for JP and Asia sales. Missing or inaccurate data can negatively impact the performance of machine learning models, thus leading to the creator of the dataset to choose to exclude games that have a lot of missing or inaccurate data. All of these reasons above could explain why NA and EU sales are better at predicting global sales than JP and Asia sales."
             ]
         },
         {
